FINALLY...with a little help from: https://raw.githubusercontent.com/funand/AdventOfCode-RambunctiousRecitation-TurnNumber/29872b123bb2e2c0c8ca939f36d70ccd20677f5b/src/TurnNumbers.java